# Cliprove

./: .gitignore  .gitmodules  IMPLEMENTATION_PLAN.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: development.md  packaging.md  troubleshooting.md
scripts/: build-sidecar.sh  build.sh  dev.sh  fetch-ffmpeg.sh
sidecar/: app.py  cliprove-sidecar.spec  jobs.py  requirements.txt
sidecar/hooks/: pyi_rth_ssl_certifi.py
sidecar/platform_login/: __init__.py  bilibili_qr.py  douyin_browser.py  sessions.py
sidecar/tests/: test_bilibili_service.py  test_douyin_mapper.py  test_youtube_service.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: cliprove-sidecar-aarch64-apple-darwin
src-tauri/migrations/: 001_initial.sql  002_library_phase4.sql
src-tauri/src/: app_state.rs  errors.rs  lib.rs  logging.rs  main.rs  models.rs  shell.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: collections.rs  library.rs  mod.rs  settings.rs  tags.rs  tasks.rs
src-tauri/src/mock/: mod.rs
src-tauri/src/sidecar/: client.rs  mod.rs
src-tauri/src/tasks/: mod.rs
src-tauri/tests/: library_integration.rs
src/adapters/: index.ts
src/components/: PlatformAuthCard.tsx
src/hooks/: usePlatformLogin.ts  useTaskActions.ts
src/lib/: errors.ts  ffmpeg.ts  media.ts  tauri.ts  utils.ts
src/pages/: HomePage.tsx  LibraryPage.tsx  SearchPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/stores/: app.ts
src/types/: adapter.ts  index.ts  models.ts
(+13 files in other folders)
